[metadata]
name = bawr
version = 0.0.6
author = Frank David Martinez Muñoz
author_email = mnesarco@gmail.com
license = MIT
license_files = LICENSE.txt
description = Tool to generate truetype fonts and atlas textures from sets of svg files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnesarco/bawr
project_urls =
    Bug Tracker = https://github.com/mnesarco/bawr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Pillow
    rectpack
    
[options.packages.find]
where = src

